<resources>
    <string name="app_name">Aston_ListUsers_fragment_navigation</string>
    <string name="title_editing_user_info">Editing user info</string>
    <string name="title_user_list">User list</string>
    <string name="fullName">%1$s %2$s</string>

    <string name="hint_phone_number">Phone number</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>

    <string name="title_cancel">Cancel</string>
    <string name="title_update">Update</string>

    <string-array name="firstNames">
        <item>Alice</item>
        <item>Bob</item>
        <item>Charlie</item>
        <item>David</item>
        <item>Emma</item>
        <item>Frank</item>
        <item>Grace</item>
        <item>Hannah</item>
        <item>Ivy</item>
        <item>Jack</item>
    </string-array>

    <string-array name="lastNames">
        <item>Smith</item>
        <item>Johnson</item>
        <item>Williams</item>
        <item>Jones</item>
        <item>Brown</item>
        <item>Davis</item>
        <item>Miller</item>
        <item>Wilson</item>
        <item>Moore</item>
        <item>Taylor</item>
    </string-array>

</resources>