<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/sizeUserAvatarBig"
        android:layout_height="@dimen/sizeUserAvatarBig"
        android:padding="@dimen/sizeBorderUserAvatarBig"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/textFieldFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:strokeColor="?attr/colorPrimarySurface"
        app:strokeWidth="@dimen/sizeBorderUserAvatarBig" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/hint_first_name"
        app:layout_constraintTop_toBottomOf="@+id/avatar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_last_name"
        app:layout_constraintTop_toBottomOf="@+id/textFieldFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUpdate"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_update"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPhoneNumber" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_cancel"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPhoneNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>